--- a/extras/service/systemd/laborem_camera.service
+++ b/extras/service/systemd/laborem_camera.service
@@ -7,7 +7,7 @@ Type=forking
 PIDFile=/tmp/laborem_camera.pid
 User=pyscada
 Group=pyscada
-ExecStart=/usr/local/bin/mjpg_streamer -i "input_uvc.so -d /dev/video0" -o "output_http.so -p 8090"
+ExecStart=/usr/local/bin/mjpg_streamer -i "input_uvc.so -d /dev/video0" -o "output_file.so -s 1 -c /var/www/pyscada/http/static/pyscada/laborem/scripts/change_filename_camera.sh"
 Restart=always
 RestartSec=60
 
