--- a/extras/service/systemd/laborem_camera.service
+++ b/extras/service/systemd/laborem_camera.service
@@ -3,11 +3,11 @@ Description=LaboREM Camera
 After=network.target
 
 [Service]
-Type=forking
+Type=simple
 PIDFile=/tmp/laborem_camera.pid
 User=pyscada
 Group=pyscada
-ExecStart=/usr/local/bin/mjpg_streamer -i "input_uvc.so -d /dev/video0" -o "output_http.so -p 8090" &
+ExecStart=/usr/local/bin/mjpg_streamer -i "input_uvc.so -d /dev/video0" -o "output_http.so -p 8090"
 Restart=always
 RestartSec=60
 
