--- a/extras/nginx_sample.conf
+++ b/extras/nginx_sample.conf
@@ -48,6 +48,10 @@ server {
             try_files $uri @proxy_to_app;
         }
 
+        location /favicon.ico {
+            proxy_pass http://127.0.0.1/static/pyscada/img/favicon.ico;
+        }
+
         location @proxy_to_app {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $http_host;
